fixed hamburger expanded menu spacing in smaller width resolutions; removed about banner text outline (glitchy)

--- a/LynnWoodPortfolio/lynn-wood-portfolio/src/Components/Navbar/Navbar.module.css
+++ b/LynnWoodPortfolio/lynn-wood-portfolio/src/Components/Navbar/Navbar.module.css
@@ -92,7 +92,7 @@ button {
   background-color: rgb(10 9 9 / 81%);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   height: 100vh;
   z-index: 1000;
   width: 100vw;
@@ -143,6 +143,7 @@ button {
 
   .expanded {
     position: absolute;
+    z-index: 1000;
   }
 
   .expanded button {
@@ -153,6 +154,11 @@ button {
     font-family: "Alegreya Sans";
     font-size: 3vh;
     justify-content: center;
+  }
+
+  .expanded button {
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
 
   .expanded button:hover {
