--- a/LynnWoodPortfolio/lynn-wood-portfolio/src/Pages/About/About.module.css
+++ b/LynnWoodPortfolio/lynn-wood-portfolio/src/Pages/About/About.module.css
@@ -20,7 +20,6 @@
   font-size: 5rem;
   left: 5%;
   top: 30%;
-  -webkit-text-stroke: 1px black;
 }
 
 .picture {
